@@ -1,6 +1,7 @@
 Version 0.39.0 (2022-03-27)
 - Simplify json usage
 - Move json methods to json client
+- Make json client independent from central config
 
 Version 0.38.5 (2022-03-22)
 - Use interface_id for interface events
